Fixed problem where the Alert.jsx component's buttons were still accessible when the alert is toggled to be invisible.

--- a/frontend/src/styles/Alert.css
+++ b/frontend/src/styles/Alert.css
@@ -15,6 +15,7 @@
 
     transform: translate(-50%, -50%) translateY(-50vh);
     transition: opacity 1s, transform 1s;
+    pointer-events: none;
 
     font-weight: bold;
 }
@@ -51,4 +52,5 @@
 #alert.visible {
     transform: translate(-50%, -50%) translateY(0);
     opacity: 1;
+    pointer-events: auto;
 }
